Crash: painting 2D textures with anchored strokes in 3.1 Beta #95992

Closed
opened 2022-02-23 13:16:02 +01:00 by naoki yamamoto · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-22 19:39, hash: 2746238dde
Worked: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181

Caused by {be876b8db684685605d18ea70b935ba5e40a03bc}

Short description of error
In 3.1 beta, crash when painting 2D textures with anchored strokes
No problem with 3.0.
Not a problem in 3D Paint with 3.1 beta

Exact steps for others to reproduce the error

  1. set a base color texture for the default cube
  2. set the image editor to paint mode and the stroke mode to anchored.
  3. painting crashes

blender.crash.txt

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-22 19:39, hash: `2746238dde` Worked: version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: `dc2d180181` Caused by {be876b8db684685605d18ea70b935ba5e40a03bc} **Short description of error** In 3.1 beta, crash when painting 2D textures with anchored strokes No problem with 3.0. Not a problem in 3D Paint with 3.1 beta **Exact steps for others to reproduce the error** 1. set a base color texture for the default cube 2. set the image editor to paint mode and the stroke mode to anchored. 3. painting crashes [blender.crash.txt](https://archive.blender.org/developer/F12884130/blender.crash.txt)
Author

Added subscriber: @poopoo

Added subscriber: @poopoo
naoki yamamoto changed title from Crash: painting 2D textures with anchor strokes in 3.1 Beta to Crash: painting 2D textures with anchored strokes in 3.1 Beta 2022-02-23 13:16:46 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Caused by {be876b8db684685605d18ea70b935ba5e40a03bc}

CC @Jeroen-Bakker

Caused by {be876b8db684685605d18ea70b935ba5e40a03bc} CC @Jeroen-Bakker
Jeroen Bakker self-assigned this 2022-02-23 18:20:32 +01:00

This issue was referenced by 540fd10b4f

This issue was referenced by 540fd10b4fda80eb9c806aae29363daefd2f990e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95992
No description provided.